fixed label gap

--- a/components/Input/index.module.css
+++ b/components/Input/index.module.css
@@ -27,6 +27,7 @@
 }
 
 .label {
+  display: block;
   margin-left: 16px;
   font-weight: 400;
   font-size: 18px;
