--- a/components/Select/index.module.css
+++ b/components/Select/index.module.css
@@ -4,6 +4,7 @@
 }
 
 .label {
+  display: block;
   margin-left: 16px;
   font-weight: 400;
   font-size: 18px;
